# hybrid-chess-engine

./: .gitignore  01_Dataset_Feasibility_Study.ipynb  02_Lumbras_Gigabase_Verification.ipynb  README.md  app.py  benchmark_speed.py  check_scores.py  config.py  experiments.json  extract_weights.py  find_timeouts.py  gauntlet.py  pyproject.toml  requirements.txt  run_baseline.bat  run_champion_rapid.bat  run_chessnet.bat  run_deep.bat  run_greedy.bat  run_hybrid_beast.bat  run_sniper_rapid.bat  run_solid_rapid.bat  summarize_all.py  summarize_rapid.py  summarize_results.py  test_depth.py  tournament_results.json  train.py  walkthrough.md
checkpoints/baseline/: config.json
checkpoints/baseline_v2/: config.json
scripts/: benchmark.py  convert_to_memmap.py  download_syzygy.py  export_onnx.py  process_data.py  test_syzygy.py  verify_v2.py
src/: __init__.py  board_encoder.py  engine.py  hybrid_engine.py  lichess_bot.py  mcts.py  model.py  neural_backend.py  train_advanced.py  uci.py  upgrade_bot.py
src_rust/: Cargo.toml  pyproject.toml
src_rust/src/: lib.rs
static/: index.html
tests/: smoke_test.py  test_rust_encoding.py  test_rust_mcts.py
